fixed margin issues on repo list page, on mobile debices

--- a/server/app/styles/drone.less
+++ b/server/app/styles/drone.less
@@ -1382,6 +1382,20 @@ nav {
 	}
 }
 
+@media screen and (min-width: 1180px) {
+	#repopage {
+		h2 {
+			padding-left:0px;
+		}
+	}
+
+	.cards {
+		.card {
+			padding-left:0px;
+		}
+	}
+}
+
 @media screen and (min-width: 80em) {
 
 }
@@ -1420,6 +1434,9 @@ nav {
 				}
 				&:nth-child(2):hover > .pure-g {
 					border-top:1px solid #262626;
+				}
+				i {
+					margin-left:0px;
 				}
 			}
 		}
